--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="360dp"
-        android:layout_weight="1"
+        android:layout_height="20dp"
+        android:layout_weight="2"
         android:orientation="vertical">
 
         <TextView
@@ -19,9 +19,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:hint="@string/formulario"
-            android:paddingStart="350dp"
-            android:paddingEnd="300sp"
-            android:textSize="56sp">
+            android:paddingStart="90dp"
+            android:paddingEnd="30sp"
+            android:textSize="60sp">
 
         </TextView>
 
@@ -30,11 +30,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="36sp"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="26dp"
             android:layout_marginStart="70dp"
             android:layout_marginEnd="70dp"
-            android:hint="@string/nombre"
-            android:autofillHints="Qstring/nombre">
+            android:hint="@string/nombre">
 
         </EditText>
 
@@ -69,7 +68,7 @@
             android:id="@+id/editarCiudad"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="36sp"
+            android:textSize="35sp"
             android:layout_marginTop="25dp"
             android:layout_marginStart="70dp"
             android:layout_marginEnd="70dp"
@@ -83,7 +82,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="36sp"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="25dp"
             android:layout_marginStart="70dp"
             android:layout_marginEnd="70dp"
             android:hint="@string/barrio"
@@ -97,8 +96,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
-        android:orientation="horizontal">
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:layout_marginTop="50dp" >
 
 
         <Button
@@ -107,7 +107,8 @@
             android:layout_width="8dp"
             android:layout_weight="2"
             android:layout_height="wrap_content"
-            android:textSize="36sp">
+            android:textSize="36sp"
+            tools:ignore="NestedWeights">
 
         </Button>
 
@@ -118,9 +119,24 @@
             android:layout_weight="2"
             android:layout_height="wrap_content"
             android:textSize="36sp">
-
         </Button>
-
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center">
+
+        <TextView
+            android:id="@+id/lifecycleStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Lifecycle Status"
+            android:textSize="24sp" />
+    </LinearLayout>
+
 
 </LinearLayout>
