--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,17 +9,17 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:layout_weight="2"
+        android:layout_height="15dp"
+        android:layout_weight="3"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/txvFormulario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:hint="@string/formulario"
-            android:paddingStart="90dp"
+            android:paddingStart="55dp"
             android:paddingEnd="30sp"
             android:textSize="60sp">
 
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="36sp"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="16dp"
             android:layout_marginStart="70dp"
             android:layout_marginEnd="70dp"
             android:hint="@string/nombre">
@@ -42,7 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="36sp"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="16dp"
             android:layout_marginStart="70dp"
             android:layout_marginEnd="70dp"
             android:hint="@string/apellido"
@@ -56,7 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="36sp"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="15dp"
             android:layout_marginStart="70dp"
             android:layout_marginEnd="70dp"
             android:hint="@string/edad"
@@ -68,8 +68,8 @@
             android:id="@+id/editarCiudad"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="35sp"
-            android:layout_marginTop="25dp"
+            android:textSize="36sp"
+            android:layout_marginTop="16dp"
             android:layout_marginStart="70dp"
             android:layout_marginEnd="70dp"
             android:hint="@string/ciudad"
@@ -82,14 +82,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="36sp"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="15dp"
             android:layout_marginStart="70dp"
             android:layout_marginEnd="70dp"
             android:hint="@string/barrio"
             android:autofillHints="@string/barrio">
 
         </EditText>
-
 
     </LinearLayout>
 
@@ -126,15 +125,14 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="center">
+        android:orientation="vertical"
+        android:gravity="center">
 
         <TextView
-            android:id="@+id/lifecycleStatus"
+            android:id="@+id/estadoCV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Lifecycle Status"
+            android:text="@string/estadoCV"
             android:textSize="24sp" />
     </LinearLayout>
 
