--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,7 +95,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="0.5"
         android:orientation="horizontal"
         android:layout_marginTop="50dp" >
 
@@ -124,16 +124,25 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:layout_weight="1.5"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/btnNueva"
+            android:layout_width="117dp"
+            android:layout_height="83dp"
+            android:text="@string/nueva">
+
+        </Button>
 
         <TextView
             android:id="@+id/estadoCV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/estadoCV"
-            android:textSize="24sp" />
+            android:textSize="24sp">
+        </TextView>
     </LinearLayout>
 
 
